<resources>
    <string name="app_name">TugasDay5</string>
    <string name="nama_samsung">Samsung Galaxy S20</string>
    <string name="harga_samsung">Harga : Rp12.999.999</string>
    <string name="kode_samsung">Kode Barang : SGS</string>
    <string name="nama_asus">Asus Vivobook 14</string>
    <string name="harga_asus">Harga : Rp9.150.999</string>
    <string name="kode_asus">Kode Barang : AV4</string>
    <string name="nama_macbook">Macbook Pro M3</string>
    <string name="harga_macbook">Harga : Rp28.999.999</string>
    <string name="kode_macbook">Kode Barang : MP3</string>

    <string name="txtInput_nama">Nama Pelanggan</string>
    <string name="radioButton_tipe">Tipe Member : </string>
    <string name="radioButton_gold">Emas</string>
    <string name="radioButton_silver">Silver</string>
    <string name="radioButton_biasa">Biasa</string>

    <string name="txtInput_kodeBarang">Kode Barang</string>
    <string name="txt_klikDaftar">Klik ini untuk Daftar Barang!</string>

    <string name="txtInput_jumlahbarang">Jumlah Barang</string>
    <string name="btn_proses">Proses</string>

    <string name="selamatDatang">Selamat Datang </string>
    <string name="tipeMember">Tipe Member </string>
    <string name="transaksiHariIni">Transaksi Hari Ini </string>
    <string name="kodeBarang">Kode Barang : </string>
    <string name="namaBarang">Nama Barang : </string>
    <string name="hargaBarang">Harga Barang : Rp</string>
    <string name="jumlahBarang">Jumlah Barang : </string>
    <string name="totalHargaBarang">Total Harga Barang : Rp</string>
    <string name="diskonHarga">Diskon Harga : Rp</string>
    <string name="diskonMember">Diskon Member : Rp</string>
    <string name="jumlahBayar">Jumlah Bayar : Rp</string>
    <string name="terimaKasih">Terima Kasih Telah Berberlanja Disini! </string>

    <string name="bagikan">Bagikan</string>
</resources>