<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvSelamat"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/selamatDatang"
            >
        </TextView>

        <TextView
            android:id="@+id/tvTipeMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/tipeMember"
            >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaksiHariIni"
                >
            </TextView>

            <TextView
                android:id="@+id/tvKodeBarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/kodeBarang"
                >
            </TextView>

            <TextView
                android:id="@+id/tvNamaBarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/namaBarang"
                >
            </TextView>

            <TextView
                android:id="@+id/tvHargaBarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/hargaBarang"
                >
            </TextView>

            <TextView
                android:id="@+id/tvJumlahBarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/jumlahBarang"
                >
            </TextView>

            <TextView
                android:id="@+id/tvTotalHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/totalHargaBarang"
                >
            </TextView>

            <TextView
                android:id="@+id/tvDiskonHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/diskonHarga"
                >
            </TextView>

            <TextView
                android:id="@+id/tvDiskonMember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/diskonMember"
                >
            </TextView>

            <TextView
                android:id="@+id/tvJumlahBayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/jumlahBayar"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terimaKasih"
                android:layout_marginTop="50dp">
            </TextView>

        </LinearLayout>

        <Button
            android:id="@+id/btnShare"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bagikan"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            >
        </Button>

    </LinearLayout>

</LinearLayout>