<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNamaPelanggan"
            android:text=" "
            android:hint="@string/txtInput_nama"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_tipe"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RadioGroup
            android:orientation="horizontal"
            android:layout_height="50dp"
            >

            <RadioButton
                android:id="@+id/memberGold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButton_gold" />

            <RadioButton
                android:id="@+id/memberSilver"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButton_silver" />

            <RadioButton
                android:id="@+id/memberBiasa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radioButton_biasa" />
        </RadioGroup>

    </TableLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etKodebarang"
            android:text=" "
            android:hint="@string/txtInput_kodeBarang"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etJumlahBarang"
            android:text=" "
            android:hint="@string/txtInput_jumlahbarang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnProses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_proses"
        android:layout_gravity="center"
        android:textSize="20dp"
        />

</LinearLayout>